新增播放列表管理器，支持歌曲添加、播放模式切换及播放控制功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ qt_add_executable(melody
     widget.h
     apimanager.cpp
     apimanager.h
+    playlistmanager.cpp
+    playlistmanager.h
 )
 
 target_link_libraries(melody
