--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,12 @@ find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Network Multimedia)
 
 qt_standard_project_setup()
 
+set(CMAKE_AUTORCC ON)
+
 qt_add_executable(melody
     WIN32 MACOSX_BUNDLE
     main.cpp
+    resources.qrc
     widget.cpp
     widget.h
     apimanager.cpp
